Agregando más archivos al repo

--- a/bts.html
+++ b/bts.html
@@ -22,7 +22,7 @@
 
     <!--Encabezados-->
     <header class="container2">
-        <a class="navbar-brand" href="inicio1.html">
+        <a class="navbar-brand" href="index.html">
             <img src="multimedia/logobts.png" alt="logo">
             <span></span>
         </a>
