--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Botones principales -->
   <nav class="navbar navbar-expand-lg bg-light shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="inicio1.html">
+      <a class="navbar-brand" href="index.html">
         <img src="multimedia/fanverse-logo.png" alt="Logo">
         <span></span>
       </a>
