--- a/mision.html
+++ b/mision.html
@@ -25,7 +25,7 @@
     <!-- Botones principales -->
   <nav class="navbar navbar-expand-lg bg-light shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="inicio1.html">
+      <a class="navbar-brand" href="index.html">
         <img src="multimedia/fanverse-logo.png" alt="Logo">
         <span></span>
       </a>
@@ -39,7 +39,7 @@
 
   <!-- Menú Tabs -->
   <ul class="nav nav-tabs justify-content-center bg-light">
-    <li class="nav-item"><a class="nav-link active" href="inicio1.html">INICIO</a></li>
+    <li class="nav-item"><a class="nav-link active" href="index.html">INICIO</a></li>
     <li class="nav-item"><a class="nav-link" href="quienes_somos2.html">¿QUIÉNES SOMOS?</a></li>
     <li class="nav-item"><a class="nav-link" href="mision.html">MISIÓN Y VISIÓN</a></li>
     <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTACTANOS</a></li>
