--- a/twice.html
+++ b/twice.html
@@ -19,7 +19,7 @@
 
     <!--Encabezados-->
     <header class="container2">
-        <a class="navbar-brand" href="inicio1.html">
+        <a class="navbar-brand" href="index.html">
             <img src="multimedia/Logo_twice.png" alt="logo">
             <span></span>
         </a>
