Agregué validaciones a la sección de contacto

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <li class="nav-item"><a class="nav-link active" href="inicio1.html">INICIO</a></li>
     <li class="nav-item"><a class="nav-link" href="quienes_somos2.html">¿QUIÉNES SOMOS?</a></li>
     <li class="nav-item"><a class="nav-link" href="mision.html">MISIÓN Y VISIÓN</a></li>
-    <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTACTANOS</a></li>
+    <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTÁCTANOS</a></li>
   </ul>
   </header>
 
