--- a/contacto4.html
+++ b/contacto4.html
@@ -46,11 +46,11 @@
          <li class="nav-item"><a class="nav-link active" href="index.html">INICIO</a></li>
          <li class="nav-item"><a class="nav-link" href="quienes_somos2.html">¿QUIÉNES SOMOS?</a></li>
          <li class="nav-item"><a class="nav-link" href="mision.html">MISIÓN Y VISIÓN</a></li>
-         <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTACTANOS</a></li>
+         <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTÁCTANOS</a></li>
        </ul>
     </header>
 
-    <div class="container py-5">
+    <div class="container py-5" id="contenedorContacto">
      <section class="apartado-contacto">
 
          <!-- GIF desde hosting confiable -->
@@ -64,29 +64,43 @@
          <div class="mb-4">
              <p><strong>WhatsApp:</strong> 
              <a href="https://wa.me/51962429883" target="_blank">+51 962 429 883</a></p>
-             <p><strong>Email:</strong> contacto@fanverse.com</p>
+             <p><strong>Email:</strong> <a href="">contacto@fanverse.com</a></p>
           </div>
 
          <form>
              <div class="mb-3 text-start">
-                 <label for="nombre" class="form-label">Nombre</label>
-                 <input type="text" class="form-control" id="nombre" name="nombre" required>
+                 <label for="nombres" class="form-label">Nombres:</label>
+                 <input type="text" class="form-control" id="nombres" name="nombres" placeholder="Yadira Lucrecia" required>
+             </div>
+
+            <div class="mb-3 text-start">
+                 <label for="apellidos" class="form-label">Apellidos:</label>
+                 <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Estañis Linares" required>
              </div>
 
              <div class="mb-3 text-start">
-                 <label for="email" class="form-label">Correo electrónico</label>
-                 <input type="email" class="form-control" id="email" name="email" required>
+                 <label for="email" class="form-label">Correo electrónico:</label>
+                 <input type="email" class="form-control" id="email" name="email" placeholder="contacto@fanverse.com" required>
              </div>
 
              <div class="mb-3 text-start">
-                 <label for="mensaje" class="form-label">Mensaje</label>
+                 <label for="telefono" class="form-label">Teléfono:</label>
+                 <input type="tel" class="form-control" id="telefono" name="telefono" placeholder="XXX-XXX-XXX" required>
+             </div>
+
+             <div class="mb-3 text-start">
+                 <label for="mensaje" class="form-label">Mensaje: </label>
                  <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
              </div>
 
-             <div class="text-center">
-                 <button type="submit" class=" btn-contacto px-4 py-2">
-                     Enviar
+             <div class="text-center mb-3">
+                 <button type="button" class=" btn-contacto px-4 py-2" id="botonEnviar">
+                     Solicitar información
                  </button>
+             </div>
+
+             <div class="text-center">
+                <p>Tus datos están seguros. Nunca compartiremos tu información</p>
              </div>
          </form>
      </section>
@@ -98,6 +112,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script/scriptContacto.js"></script>
 </body>
 </html>
 
