--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <li class="nav-item"><a class="nav-link" href="quienes_somos2.html">¿QUIÉNES SOMOS?</a></li>
     <li class="nav-item"><a class="nav-link" href="mision.html">MISIÓN Y VISIÓN</a></li>
     <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTÁCTANOS</a></li>
+    <li class="nav-item"><a class="nav-link" href="cotizador.html">COTIZADOR</a></li>
   </ul>
   </header>
 
@@ -203,10 +204,10 @@
                  <h3>SEVENTEEN</h3>
                  <p class="banda"> Brillan con pop, hip-hop y EDM, coros pegajosos y química explosiva. Sus letras celebran la amistad, el crecimiento y el optimismo.</p>
 
-                 <button type="button" class="seventeen btn btn-luz"
-                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                    <b>INGRESA</b>
-                 </button>
+                 <a href="seventeen.html"
+                   class="btn seventeen" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x:.5rem; --bs-btn-font-size:.75rem">
+                   <b>INGRESA</b>
+                  </a>
 
              </div>
          </div>
@@ -217,10 +218,10 @@
                  <h3>ITZY</h3>
                  <p class="banda">Destacan energía con pop vibrante, electropop y dance. Sus letras empoderan con confianza, ritmo acelerado y actitud feroz.</p>
 
-                 <button type="button" class="itzy btn"
-                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                    <b>INGRESA</b>
-                 </button>
+                 <a href="itzy.html"
+                   class="btn itzy" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x:.5rem; --bs-btn-font-size:.75rem">
+                   <b>INGRESA</b>
+              </a>
 
              </div>
          </div>
