--- a/mision.html
+++ b/mision.html
@@ -43,6 +43,7 @@
     <li class="nav-item"><a class="nav-link" href="quienes_somos2.html">¿QUIÉNES SOMOS?</a></li>
     <li class="nav-item"><a class="nav-link" href="mision.html">MISIÓN Y VISIÓN</a></li>
     <li class="nav-item"><a class="nav-link" href="contacto4.html">CONTÁCTANOS</a></li>
+    <li class="nav-item"><a class="nav-link" href="cotizador.html">COTIZADOR</a></li>
   </ul>
   </header>
   <div class="sparkle-container"></div>
