--- a/mision.html
+++ b/mision.html
@@ -121,14 +121,19 @@
       </section>
 
       <section class="section-cta">
-        <h2 class="pixel-heading">¡Únete a la fiesta!</h2>
-        <p class="card-text">
-          <img src="https://media1.tenor.com/m/1pluedrae0cAAAAd/kpdh-kpop.gif" alt="imagen" width="40%">
-        </p>
-        <div class="cta-buttons">
-          <button class="kpop-button">¡Comienza la música!</button>
-        </div>
-      </section>
+    <h2 class="pixel-heading">¡Únete a la fiesta!</h2>
+    <p class="card-text">
+        <img src="https://media1.tenor.com/m/1pluedrae0cAAAAd/kpdh-kpop.gif" alt="imagen" width="40%">
+    </p>
+    <div class="cta-buttons">
+        <a href="registro.html" style="text-decoration: none;">
+            <button class="kpop-button">¡Comienza la música!</button>
+        </a>
+        <a href="formulario.html" style="text-decoration: none;">
+            <button class="kpop-button">¡Deja tu feedback!</button>
+        </a>
+    </div>
+</section>
     </div>
   </div>
 
